2002-06-09  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (EditorBindings): Take puts call
	out of Insert binding. Remove <Double-1><ButtonRelease-1>
	binding. This binding did not function in version 5.0
	and it was highlighting in an unexpected way under 5.1.

2002-06-08  Mo DeJong  <supermo@bayarea.net>

	* gui/preferences.tcl (AddInclude): Reorder bindings
	on "Include Directories" text widget so that hitting
	Return in the text widget no longer dismisses the
	project prefs dialog.

2002-06-08  Mo DeJong  <supermo@bayarea.net>

	* etc/english.txt.in: Remove unused Email, Web,
	BugReport, LimitScanMsg, LimMsg, ReportBugs,
	EditionCannotOpenThisProject, SplashSupportText,
	ButtonBugReport, and ButtonMail strings. Removed
	mention of old support email from the string
	NewerProjectCannotBeOpened.
	* etc/german.txt: Ditto.
	* etc/japanese.txt: Ditto.
	* gui/bugreport.tcl (mail_send_bug_report,
	web_send_bug_report, mail_bug_report, sn_drop_mail_line,
	sn_send_mail): Remove all old email and web based
	bug reporting code.
	* gui/misc.tcl: Remove commented out use of the string
	SplashSupportText.
	* gui/preferences.tcl (AddOthers, handle_mailhost):
	Disconnect the mailhost entry box from the
	sn_options(def,mailhost) variable. The gui elements were
	not removed to avoid doc impact of a gui change.
	Remove unused method handle_mailhost.
	* gui/sninit.tcl (sn_init_globals): Remove mailhost,
	cygnus-home-http, and bug-mail-address sn_options
	values. Remove any old cygnus references.
	* gui/tmeter.tcl: Use copyright not cygnus_copyright.

2002-06-07  Mo DeJong  <supermo@bayarea.net>

	* gui/multiview.tcl (AddMenu):
	* gui/projedit.tcl (AddMenu): Pass $itk_component(hull)
	instead of $this to AddWindowsMenu method to avoid
	a problem in sn_hide_show_project where all the project
	windows were withdrawn via Windows->Iconize Project.
	Ditto for AddHelpMenu.

2002-06-07  Mo DeJong  <supermo@bayarea.net>
